// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Card all cards 1`] = `
<div>
  <div
    className="card"
  >
    <div
      className="card-body"
    >
      <div
        className="card-title h5"
      >
        Test Card
      </div>
      <div>
        Some quick example text to build on the card title and make up the bulk of the card&#39;s content.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Control Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormControl"
  >
    <input
      className="form-control"
      type="text"
    />
    
  </div>
</div>
`;

exports[`Storyshots Design System/Form Control Disabled 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormControl"
  >
    <input
      className="form-control"
      disabled={true}
      type="text"
    />
    
  </div>
</div>
`;

exports[`Storyshots Design System/Form Control With Description 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormControl"
  >
    <input
      className="form-control"
      name="input"
      type="text"
    />
    <div
      className="form-input__description"
    >
      test description
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Control With Description And Errors 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormControl"
  >
    <input
      className="form-control is-invalid"
      type="text"
    />
    <div
      className="invalid-feedback"
    >
      <ol
        className="invalid-feedback__list"
      >
        <li>
          invalid input!
        </li>
      </ol>
    </div>
    <div
      className="form-input__description"
    >
      test description
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Control With Errors 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormControl"
  >
    <input
      className="form-control is-invalid"
      type="text"
    />
    <div
      className="invalid-feedback"
    >
      <ol
        className="invalid-feedback__list"
      >
        <li>
          invalid input!
        </li>
      </ol>
    </div>
    
  </div>
</div>
`;

exports[`Storyshots Design System/Form Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <form
    className="Form"
    id="form"
    onSubmit={[Function]}
  >
    <div
      className="FormGroup"
    >
      <div
        className="FormLabel"
      >
        <label
          htmlFor="first-name"
        >
          First name
        </label>
      </div>
      <div
        className="FormControl"
      >
        <div
          className="FormControl"
        >
          <input
            className="form-control"
            id="first-name"
            type="text"
          />
          <div
            className="form-input__description"
          >
            Enter your first name
          </div>
        </div>
        
      </div>
    </div>
    <div
      className="FormGroup"
    >
      <div
        className="FormLabel"
      >
        <label
          htmlFor="last-name"
        >
          Last name
        </label>
        <span
          className="helper-text"
        >
           (required)
        </span>
      </div>
      <div
        className="FormControl"
      >
        <div
          className="FormControl"
        >
          <input
            className="form-control"
            id="last-name"
            type="text"
          />
          <div
            className="form-input__description"
          >
            Enter your last name
          </div>
        </div>
        
      </div>
    </div>
    <div
      className="FormGroup"
    >
      <div
        className="FormLabel"
      >
        <label
          htmlFor="email"
        >
          Email
        </label>
      </div>
      <div
        className="FormControl"
      >
        <div
          className="FormControl"
        >
          <input
            className="form-control is-invalid"
            id="email"
            type="text"
          />
          <div
            className="invalid-feedback"
          >
            invalid email
          </div>
          <div
            className="form-input__description"
          >
            Enter your email address
          </div>
        </div>
        
      </div>
    </div>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</div>
`;

exports[`Storyshots Design System/Form Group Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="default"
  >
    
    <div
      className="FormControl"
    >
      <input
        className="form-control"
        type="text"
      />
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Group Required 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-required"
  >
    <div
      className="FormLabel"
    >
      <span>
        Form Group with label
      </span>
      <span
        className="helper-text"
      >
         (required)
      </span>
    </div>
    <div
      className="FormControl"
    >
      <input
        className="form-control"
        type="text"
      />
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Group With Description 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-description"
  >
    <div
      className="FormLabel"
    >
      <label
        htmlFor="input"
      >
        Form Group with description
      </label>
    </div>
    <div
      className="FormControl"
    >
      <input
        className="form-control"
        id="input"
        type="text"
      />
      <div
        className="form-input__description"
      >
        test description
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Group With Errors 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-errors"
  >
    <div
      className="FormLabel"
    >
      <span>
        Form Group with errors
      </span>
    </div>
    <div
      className="FormControl"
    >
      <input
        className="form-control is-invalid"
        type="text"
      />
      <div
        className="invalid-feedback"
      >
        <ol
          className="invalid-feedback__list"
        >
          <li>
            invalid input!
          </li>
        </ol>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Group With Label 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-label"
  >
    <div
      className="FormLabel"
    >
      <label
        htmlFor="input"
      >
        Form Group with label
      </label>
    </div>
    <div
      className="FormControl"
    >
      <input
        className="form-control"
        id="input"
        type="text"
      />
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Inline 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <form
    className="Form inline"
    id="form"
    onSubmit={[Function]}
  >
    <div
      className="FormGroup"
    >
      <div
        className="FormLabel"
      >
        <label
          htmlFor="first-name"
        >
          First name
        </label>
      </div>
      <div
        className="FormControl"
      >
        <div
          className="FormControl"
        >
          <input
            className="form-control"
            id="first-name"
            type="text"
          />
          <div
            className="form-input__description"
          >
            Enter your first name
          </div>
        </div>
        
      </div>
    </div>
    <div
      className="FormGroup"
    >
      <div
        className="FormLabel"
      >
        <label
          htmlFor="last-name"
        >
          Last name
        </label>
        <span
          className="helper-text"
        >
           (required)
        </span>
      </div>
      <div
        className="FormControl"
      >
        <div
          className="FormControl"
        >
          <input
            className="form-control"
            id="last-name"
            type="text"
          />
          <div
            className="form-input__description"
          >
            Enter your last name
          </div>
        </div>
        
      </div>
    </div>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</div>
`;

exports[`Storyshots Design System/Pill Blue 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill Pill--blue"
  >
    Test pill
  </div>
</div>
`;

exports[`Storyshots Design System/Pill Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill"
  >
    Test pill
  </div>
</div>
`;

exports[`Storyshots Design System/Pill Orange 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill Pill--orange"
  >
    Test pill
  </div>
</div>
`;

exports[`Storyshots Design System/Pill Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill Pill--sm"
  >
    Test pill
  </div>
</div>
`;
